# rust-ytmapi

./: Cargo.toml  pointers.md  readme.md  res.alb.json  res.art.json  res.search.json
src/: config.rs  lib.rs  main.rs  parse.rs  requests.rs
src/parse/: findpointers.rs  pointers.rs
