[package]
name = "youtube-music"
description = "A library for fetching Youtube Music metadata"
readme = "readme.md"
repository = "https://github.com/jakubslaby09/rust-ytmapi"
license = "MIT OR Apache-2.0"
version = "2.0.0-alpha.2"
edition = "2021"
exclude = ["res*.json", "pointers.md"]

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
lazy-regex = "2.5.0"
serde_json = "1.0.94"

[lib]
name = "youtube_music"
