[package]
name = "youtube-music"
description = "A library for fetching Youtube Music metadata"
readme = "readme.md"
repository = "https://github.com/jakubslaby09/rust-ytmapi"
license = "MIT OR Apache-2.0"
version = "2.2.1"
edition = "2021"
exclude = ["res*.json", "pointers.md"]

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.111"

[lib]
name = "youtube_music"
